fix: overflow 속성 삭제

--- a/Week1/Homework/styles/sections.css
+++ b/Week1/Homework/styles/sections.css
@@ -275,7 +275,6 @@
 }
 
 .gallery-scroller {
-  overflow-y: visible;
   position: relative;
   padding: 0 3.6rem;
 }
